5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1590_2895.log
== TEST (2019-03-21 13:32:24) 
-- CODE:
quant1= float(input("Quantos jogos:")
var1= float(input("Qual o valor do jogo:"))
frete= float(input("Qual o valor do frete"))
total= float(quant1*var1+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var1= float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:32:41) 
-- CODE:
quant1= float(input("Quantos jogos:")
var1= (input("Qual o valor do jogo:"))
frete= float(input("Qual o valor do frete"))
total= float(quant1*var1+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var1= (input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:33:04) 
-- CODE:
quant1= float(input("Quantos jogos:")
var1= input("Qual o valor do jogo:")
frete= float(input("Qual o valor do frete"))
total= float(quant1*var1+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var1= input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:33:06) 
-- CODE:
quant1= float(input("Quantos jogos:")
var1= input("Qual o valor do jogo:")
frete= float(input("Qual o valor do frete"))
total= float(quant1*var1+frete)
print("Valor a ser pago:"total)				  
-- EXECUTION TIME:
0.164549
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    var1= input()
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:34:25) 
-- CODE:
quant1= float(input("Quantos jogos:")
var= input("Qual o valor do jogo:")
frete= input("Qual o valor do frete:")
total= float(quant1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var= input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:34:46) 
-- CODE:
quant1= float(input("Quantos jogos:")
var= float(input("Qual o valor do jogo:"))
frete= input("Qual o valor do frete:")
total= float(quant1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var= float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:34:49) 
-- CODE:
quant1= float(input("Quantos jogos:")
var= float(input("Qual o valor do jogo:"))
frete= input("Qual o valor do frete:")
total= float(quant1*var+frete)
print("Valor a ser pago:"total)				  
-- EXECUTION TIME:
0.223295
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    var= float(input())
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:09) 
-- CODE:
quant= float(input("Quantos jogos:")
var= float(input("Qual o valor do jogo:"))
frete= input("Qual o valor do frete:")
total= float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var= float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:10) 
-- CODE:
quant= float(input("Quantos jogos:")
var= float(input("Qual o valor do jogo:"))
frete= input("Qual o valor do frete:")
total= float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var= float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:10) 
-- CODE:
quant= float(input("Quantos jogos:")
var= float(input("Qual o valor do jogo:"))
frete= input("Qual o valor do frete:")
total= float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var= float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:11) 
-- CODE:
quant= float(input("Quantos jogos:")
var= float(input("Qual o valor do jogo:"))
frete= input("Qual o valor do frete:")
total= float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var= float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:35:47) 
-- CODE:
quant = float(input("Quantos jogos:")
var = float(input("Qual o valor do jogo:"))
frete = input("Qual o valor do frete:")
total = float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:36:05) 
-- CODE:
quant = float(input("Quantos jogos:")

frete = input("Qual o valor do frete:")
total = float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 3
    frete = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:37:52) 
-- CODE:
quant = float(input("Quantos jogos:")
var = float(input("Qual o valor do jogo?"))
frete = input("Qual o valor do frete:")
total = float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:38:15) 
-- CODE:
quant = float(input("Quantos jogos:")
var = input("Qual o valor do jogo?")
frete = input("Qual o valor do frete:")
total = float(quan1*var+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    var = input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:39:00) 
-- CODE:
quant = float(input("Quantos jogos:")
preco = input("Qual o valor do jogo?")
frete = float(input("Qual o valor do frete:"))
total = float(quan1*preco+frete)
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 2
    preco = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:39:55) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:")
preco = input("Qual o valor do jogo?")
frete = float(input("Qual o valor do frete:"))
total = float(quan1*preco+frete)
#saidas				  
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 3
    preco = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:40:48) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:")
preco = float(input("Qual o valor dos jogos?"))
frete = float(input("Qual o valor do frete:"))
total = float(quan1*preco+frete)
#saidas				  
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 3
    preco = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:40:56) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:")
preco = float(input("Qual o valor dos jogos?"))
frete = float(input("Qual o valor do frete:"))
total = float(quan1*preco+frete)
#saidas				  
print("Valor a ser pago:"total)				  
-- EXECUTION TIME:
0.17027
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 3
    preco = float(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:41:04) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:")

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 4
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:41:48) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:")

frete = float(input("Qual o valor do frete:")
total = float(quan1*frete)
#saidas				  
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 4
    frete = float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:42:50) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print("Valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 7
    print("Valor a ser pago:"total)				  
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:43:08) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print("Valor a ser pago:" total)				  
-- ERROR:
File "XXXX", line 7
    print("Valor a ser pago:" total)				  
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:43:22) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print("Valor a ser pago:" total)				  
-- EXECUTION TIME:
0.192597
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 7
    print("Valor a ser pago:" total)				  
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:44:03) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print(total)				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float(quan1*frete)
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:44:06) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print(total)				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float(quan1*frete)
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:44:06) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print(total)				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float(quan1*frete)
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:44:06) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quan1*frete)
#saidas				  
print(total)				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float(quan1*frete)
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:44:47) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))

frete = float(input("Qual o valor do frete:"))
total = float(quant*frete)
#saidas				  
print(total)				  
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:45:50) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var=frete)
#saidas				  
print(total)				  
-- ERROR:
File "XXXX", line 5
    total = float(quant*var=frete)
                 ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:46:06) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(total)				  
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:46:59) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print("Qual o valor do jogo:"total)				  
-- ERROR:
File "XXXX", line 7
    print("Qual o valor do jogo:"total)				  
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:47:23) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print("Valor a ser pago:" total)				  
-- ERROR:
File "XXXX", line 7
    print("Valor a ser pago:" total)				  
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:47:41) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(total)				  
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:49:37) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(("valor a ser pago:")total)				  
-- ERROR:
File "XXXX", line 7
    print(("valor a ser pago:")total)				  
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:49:47) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print("valor a ser pago:"total)				  
-- ERROR:
File "XXXX", line 7
    print("valor a ser pago:"total)				  
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:49:54) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(total)				  
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:50:34) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(print("valor da ser pago:")total)				  
-- ERROR:
File "XXXX", line 7
    print(print("valor da ser pago:")total)				  
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:50:43) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(total)				  
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:50:46) 
-- CODE:
#entrada
quant = float(input("Quantos jogos:"))
var = float(input("Qual o valor do jogo?"))
frete = float(input("Qual o valor do frete:"))
total = float(quant*var+frete)
#saidas				  
print(total)				  
-- EXECUTION TIME:
0.197168
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
